# the-c-programming-language

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ch_01/: ex_01_02.c  ex_01_06.c  ex_01_07.c  ex_01_12.c  ex_01_14.c  ex_01_15.c  ex_01_17.c  ex_01_22.c  ex_1_1.c  ex_1_1.h  ex_1_10.c  ex_1_10.h  ex_1_12.c  ex_1_12.h  ex_1_13.c  ex_1_13.h  ex_1_2.c  ex_1_2.h  ex_1_3.c  ex_1_3.h  ex_1_4.c  ex_1_4.h  ex_1_5.c  ex_1_5.h  ex_1_6.c  ex_1_6.h  ex_1_7.c  ex_1_7.h  ex_1_8.c  ex_1_8.h  ex_1_9.c  ex_1_9.h  runner.c
ch_01/ex_10/: ex_1_10.c
ch_01/ex_11/: ex_1_11.md
ch_01/ex_13/: ex_1_13.c
ch_01/ex_16/: ex_1_16.c
ch_01/ex_18/: ex_1_18.c
ch_01/ex_19/: ex_1_19.c
ch_01/ex_20/: ex_1_20.c
ch_01/ex_21/: ex_1_21.c
ch_01/ex_23/: ex_1_23.c
ch_01/ex_24/: ex_1_24.c
ch_01/ex_3/: ex_1_3.c
ch_01/ex_4/: ex_1_4.c
ch_01/ex_5/: ex_1_5.c
ch_01/ex_7/: ex_1_7.c
ch_01/ex_8/: ex_1_8.c
ch_01/ex_9/: ex_1_9.c
ch_02/: ex_02_02.c  ex_02_05.c  ex_02_07.c  ex_02_08.c  ex_02_10.c
ch_02/ex_1/: ex_2_1.c
ch_02/ex_3/: ex_2_3.c
ch_02/ex_4/: ex_2_4.c
ch_02/ex_6/: ex_2_6.c
ch_02/ex_9/: ex_2_9.c
ch_03/: ex_03_01.c  ex_03_02.c  ex_03_03.c  ex_03_04.c  ex_03_05.c
ch_03/ex_06/: ex_03_06.c
ch_04/: ex_04_01.c  ex_04_02.c  ex_04_03.c  ex_04_04.c  ex_04_05.c  ex_04_06.c  ex_04_07.c  ex_04_08.c  ex_04_09.c  ex_04_10.c  ex_04_11.c  ex_04_12.c  ex_04_13.c  ex_04_14.c
ch_05/: ex_05_01.c  ex_05_02.c  ex_05_03.c  ex_05_04.c  ex_05_05.c  ex_05_06.c  ex_05_07.c  ex_05_08.c  ex_05_09.c  ex_05_10.c  ex_05_13.c  ex_05_14.c  ex_05_15.c  ex_05_16.c
