cmake_minimum_required(VERSION 3.30)
project(the_c_programming_language C)
set(CMAKE_C_STANDARD 11)

add_executable(the_c_programming_language
        #       ch_01/ex_01_01.c
        #       ch_01/ex_01_02.c
        #       ch_01/ex_01_03.c
        #       ch_01/ex_01_04.c
        #       ch_01/ex_01_05.c
        #       ch_01/ex_01_06.c
        #       ch_01/ex_01_07.c
        #       ch_01/ex_01_08.c
        #       ch_01/ex_01_09.c
        #       ch_01/ex_01_10.c
        #       ch_01/ex_01_12.c
        #       ch_01/ex_01_13.c
        #       ch_01/ex_01_14.c
        #       ch_01/ex_01_15.c
        #       ch_01/ex_01_16.c
        #       ch_01/ex_01_17.c
        #       ch_01/ex_01_18.c
        #       ch_01/ex_01_19.c
        #       ch_01/ex_01_20.c
        #       ch_01/ex_01_21.c
        #       ch_01/ex_01_22.c
        #       ch_01/ex_01_23.c
        #       ch_01/ex_01_24.c
        #       ch_02/ex_02_01.c
        #       ch_02/ex_02_02.c
        #       ch_02/ex_02_03.c
        #       ch_02/ex_02_04.c
        #       ch_02/ex_02_05.c
        #       ch_02/ex_02_06.c
        #       ch_02/ex_02_07.c
        #       ch_02/ex_02_08.c
        #       ch_02/ex_02_09.c
        #       ch_02/ex_02_10.c
        #       ch_03/ex_03_01.c
        #       ch_03/ex_03_02.c
        #       ch_03/ex_03_03.c
        #       ch_03/ex_03_04.c
        #       ch_03/ex_03_05.c
        #       ch_03/ex_03_06.c
        #       ch_04/ex_04_01.c
        #       ch_04/ex_04_02.c
        #       ch_04/ex_04_03.c
        #       ch_04/ex_04_04.c
        #       ch_04/ex_04_05.c
        #       ch_04/ex_04_06.c
        #       ch_04/ex_04_07.c
        #       ch_04/ex_04_08.c
        #       ch_04/ex_04_09.c
        #       ch_04/ex_04_10.c
        #       ch_04/ex_04_11.c
        #       ch_04/ex_04_12.c
        #       ch_04/ex_04_13.c
        #       ch_04/ex_04_14.c
        #       ch_05/ex_05_01.c
        #       ch_05/ex_05_02.c
        #       ch_05/ex_05_03.c
        #       ch_05/ex_05_04.c
        #       ch_05/ex_05_05.c
        #       ch_05/ex_05_06.c
        #       ch_05/ex_05_10.c
        #       ch_05/ex_05_13.c
        #       ch_05/ex_05_14.c
        #       ch_05/ex_05_15.c
        #       ch_05/ex_05_16.c
)

target_link_libraries(the_c_programming_language m)